--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,11 @@
     --black: #3B434E;
     --white: #FFFFFF;
     --primary: #7653FC;
+    --primary-hover:#6344df;
     --red: #DE0000;
     --green: #1DC37E;
     --green-light: #C8F8E4;
+    --grey-light:#EBEBEB;
     --font-family: "Noto Sans KR", sans-serif;
 }
 
