-добавила страниц, добавила событие на клик на категории

--- a/layout/sidebar/menu/Menu.module.css
+++ b/layout/sidebar/menu/Menu.module.css
@@ -39,11 +39,11 @@
 }
 
 .secondLevelBlock {
-
+    display: none;
 }
 
 .secondLevelBlockOpen {
-
+    display: block;
 }
 
 .secondLevelBlockOpen:last-child {
