--- a/components/htag/Htag.module.css
+++ b/components/htag/Htag.module.css
@@ -1,15 +1,19 @@
-.h1{
+.h1 {
     font-size: 26px;
     font-weight: 500;
     line-height: 35px;
 }
-.h2{
+
+.h2 {
     font-size: 20px;
-    font-weight:600;
+    font-weight: 600;
     line-height: 27px;
+    margin-top: 0;
+    margin-bottom: 25px;
 }
-.h3{
+
+.h3 {
     font-size: 16px;
-    font-weight:400;
+    font-weight: 400;
     line-height: 24px;
 }
