--- a/page-components/topPageComponent/TopPageComponent.module.css
+++ b/page-components/topPageComponent/TopPageComponent.module.css
@@ -1,5 +1,4 @@
 .topPageWrapper {
-    margin-top: 40px;
 }
 
 .title {
@@ -17,4 +16,37 @@
     justify-items: left;
     gap: 20px;
 }
+.advantageSection{
+    margin-top: 47px;
+}
+
+.advantageWrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 40px;
+    margin-bottom: 30px;
+}
+.seo{
+
+}
+.seo h1 {
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 35px;
+}
+
+.seo h2 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27px;
+    margin-top: 0;
+    margin-bottom: 25px;
+}
+
+.seo h3 {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
 
