--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
     --red: #DE0000;
     --green: #1DC37E;
     --green-light: #C8F8E4;
+    --grey:#A4A4A4;
     --grey-light: #EBEBEB;
     --grey-dark: #787D85;
     --font-family: "Noto Sans KR", sans-serif;
