--- a/components/product/Product.module.css
+++ b/components/product/Product.module.css
@@ -1,3 +1,50 @@
-.product {
+.productCard {
+    display: grid;
+    grid-template-columns:
+    [start] 70px [logoend] 30px [titlestart] calc(50% - 100px) [middle] 1fr auto[pricestart] auto [priceend]40px [creditstart] auto [creditend] 40px [ratestart] auto [end];
+    margin-bottom: 30px;
+    padding: 30px;
+}
 
+.logo {
+    grid-column: start / logoend;
+    grid-row: 1 /span 2;
+
+}
+
+.title, .tags {
+    grid-column: titlestart / middle;
+}
+
+.price, .priceTitle {
+    grid-column: pricestart / priceend;
+}
+
+.credit, .creditTitle {
+    grid-column: creditstart / creditend;
+}
+
+.rating, .ratingTitle {
+    grid-column: ratestart / end;
+}
+
+.features {
+    grid-column: start / middle;
+}
+
+.advBlock {
+    grid-column: middle / end;
+}
+
+.advantages {
+
+}
+
+.disadvantages {
+
+}
+
+.hr, .desc, .actions {
+
+    grid-column: start/end;
 }
