--- a/components/product/Product.module.css
+++ b/components/product/Product.module.css
@@ -1,8 +1,10 @@
-.productCard {
+.product {
     display: grid;
     grid-template-columns:
-    [start] 70px [logoend] 30px [titlestart] calc(50% - 100px) [middle] 1fr auto[pricestart] auto [priceend]40px [creditstart] auto [creditend] 40px [ratestart] auto [end];
-    margin-bottom: 30px;
+		[start] 70px [logoend] 30px [titlestart]  calc(50% - 100px) [middle] 1fr [pricestart] auto [priceend] 40px
+		 [creditstart] auto [creditend] 40px [ratestart] auto [end];
+
+    margin-top: 30px;
     padding: 30px;
 }
 
@@ -108,4 +110,77 @@
 
 .reviewBtn {
     margin-left: 10px;
+}
+
+.characteristic {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: baseline;
+    padding-right: 60px;
+    gap: 10px;
+    font-size: 16px;
+    line-height: 32px;
+}
+
+.characteristicName {
+    font-weight: 600;
+
+}
+
+.characteristicDots {
+    border-bottom: 1px dashed var(--grey-light);
+    margin-bottom: 5px;
+}
+
+.characteristicValue {
+    font-weight: 500;
+}
+
+
+@media screen and(max-width: 990px) {
+    .product {
+        grid-template-columns: 70px 30px 1fr;
+        grid-template-areas:
+			"logo . title"
+			"logo . tags"
+			"priceTitle priceTitle price"
+			"creditTitle creditTitle credit"
+			"rateTitle rateTitle rating"
+			"hr hr hr"
+			"description description description"
+			"feature feature feature"
+			"advBlock advBlock advBlock"
+			"hr2 hr2 hr2"
+			"actions actions actions";
+    }
+    .price {
+        margin-bottom: 10px;
+    }
+    .credit{
+        margin-bottom: 10px;
+    }
+    .rating{
+        margin-bottom: 10px;
+    }
+}
+@media screen and (max-width: 650px) {
+    .product {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+			"logo"
+			"title"
+			"tags"
+			"price"
+			"priceTitle"
+			"credit"
+			"creditTitle"
+			"rating"
+			"rateTitle"
+			"hr"
+			"description"
+			"feature"
+			"advBlock"
+			"hr2"
+			"actions";
+    }
 }
