--- a/components/rating/Rating.module.css
+++ b/components/rating/Rating.module.css
@@ -1,11 +1,25 @@
+.ratingWrapper {
+    position: relative;
+}
+
 .star svg {
     margin-right: 5px;
 }
 
-.filled svg{
+.filled svg {
     fill: var(--primary);
 }
 
 .editable {
     cursor: pointer;
+}
+
+.errorMsg {
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    color: var(--red);
+}
+.error svg{
+    stroke: var(--red);
 }
