--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
     --primary: #7653FC;
     --primary-hover: #6344df;
     --red: #DE0000;
+    --light-red:#fea291;
     --green: #1DC37E;
     --green-light: #C8F8E4;
     --grey:#A4A4A4;
