-навесила forwardRef для карточек, чтоб при нажатии плавно переходил в нужный блок

--- a/components/product/Product.module.css
+++ b/components/product/Product.module.css
@@ -96,6 +96,9 @@
     font-weight: 300;
     align-self: flex-end;
 }
+.ratingTitle a{
+    color: var(--primary);
+}
 
 .month {
     font-size: 14px;
