-анимация меню (framer-motion)

--- a/layout/sidebar/menu/Menu.module.css
+++ b/layout/sidebar/menu/Menu.module.css
@@ -39,15 +39,7 @@
 }
 
 .secondLevelBlock {
-    display: none;
-}
-
-.secondLevelBlockOpen {
-    display: block;
-}
-
-.secondLevelBlockOpen:last-child {
-    margin-bottom: 20px;
+overflow: hidden;
 }
 
 .thirdLevel {
